# parking-app

client/: .env  .gitignore  app.json  colors.ts  metro.config.js  package.json  tailwind.config.js
client/app/: +not-found.tsx  _layout.tsx
client/app/(tabs)/: _layout.tsx  bookings.tsx  index.tsx  profile.tsx
client/assets/fonts/: index.ts
client/components/icons/: chart.tsx  home.tsx  person.tsx  wallet.tsx
client/components/ui/: Card.tsx  Header.tsx  Screen.tsx  TabOption.tsx  Typeahead.tsx
client/src/components/layout/: Header.tsx  Screen.tsx
client/src/components/ui/: Card.tsx  Typeahead.tsx  Typography.tsx
client/src/config/: api.ts
client/src/features/parking/: api.ts  constants.ts  types.ts
client/src/hooks/: useFonts.ts
client/src/services/: api.ts  utils.ts
server/: .dockerignore  .gitignore  Dockerfile  compose.yaml  entrypoint.sh  pyproject.toml  pytest.ini
server/src/apps/common/: models.py
server/src/apps/core/: admin.py  models.py  serializers.py  urls.py  views.py
server/src/apps/core/migrations/: 0001_initial.py  0002_rename_value_entry_amount.py  0003_account_currency_account_currency_symbol.py  0004_remove_entry_account_remove_category_user_and_more.py
server/src/apps/docs/: __init__.py  decorators.py  parameters.py  schemas.py
server/src/apps/user/: admin.py  models.py  serializers.py  urls.py  views.py
server/src/apps/user/migrations/: 0001_initial.py  0002_user_phone_number.py
server/src/config/: settings.py  urls.py
server/src/tests/: conftest.py  factories.py  test_auth.py  test_models.py  test_parking.py
(+4 files in other folders)
